correct line breaks in addresses

--- a/css/style.css
+++ b/css/style.css
@@ -4,4 +4,5 @@
    will be added in a div with id="key" and the text as the "value" field */
 
 #phone_numbers {font-style:italic}
+#address {font-style:italic}
 #organization_name {font-weight:bold}
